k8s/mlflow-server-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      tag: mlflow-server
  template:
    metadata:
      labels:
        tag: mlflow-server
    spec:
      containers:
        - name: mlflow-server
          image: vchraf/mlflow-server:v2
          args: ["--backend-store-uri","postgresql://admin:admin@x.x.x.x:5432/mlflow_db","--default-artifact-root","s3://mlflow/","--host","0.0.0.0","--port","5000","--workers=1"]
          ports:
            - containerPort: 5775
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server-clusterip
spec:
  type: LoadBalancer
  selector:
    tag: mlflow-server
  ports:
    - port: 5775
      targetPort: 5775
